Fixed track names being hidden behind container

--- a/src/styles/tracks.css
+++ b/src/styles/tracks.css
@@ -91,7 +91,7 @@
 }
 
 .track-name-header {
-  margin-top: 0px;
+  margin-top: -800px;
 
   font: 'Roboto';
   font-size: 3rem;
